Added layer 4 to [1.md]

--- a/1.md
+++ b/1.md
@@ -41,7 +41,7 @@ Simply put, the physical layer is just the components and wires that get the bit
 
 The Data-Link layer solves the issues presented when sending information between physically connected computers. It serves the purpose of sending bits of information from one **NIC to another NIC**. A `NIC`: Network Interface Cards (Could also be a **Wi-Fi Access Card**), is a physical component in a machine that receives the information from the cable and into the machine.
 
-**Each NIC** has a `MAC Addresses`. A `MAC Address` is a standard, "one of a kind", string of 48 bits represented by 12 _Hexadecimal_ characters (exmpl: A0-B1-C2-D3-E4-F5) that are exclusive to each NIC. We can then use that `MAC Address` to send information to another machine on the same network.
+**Each NIC** has a `MAC Addresses`. A MAC Address is a standard, "one of a kind", string of 48 bits represented by 12 _Hexadecimal_ characters (exmpl: A0-B1-C2-D3-E4-F5) that are exclusive to each NIC. We can then use that MAC Address to send information to another machine on the same network.
 
 Another component in the 2nd layer is a `Switch`. A switch allows to connect multiple computers physically using network cables to creating a *local* network called "**LAN**"* (Local Area Network). A switch can also be used to group computers in the LAN to *sub*-networks called a "**VLAN**"s* that are "pseudo-isolated" from the rest of the computers connected to the switch, sending packets from one VLAN to another is still possible tough.
 
@@ -61,7 +61,7 @@ MAC ADDR    a0-d2-e0        f0-d1-f2        a2-2f-3f        5f-2c-4d        a0-d
 
 #### **The Third Layer, The Networking Layer**
 
-The third layer serves the purpose of **End to End** packet delivery, by using a different addressing scheme then the one that layer 2 uses called `IP address`. An `IP Address` is made up of 32 bits represented as 4 octets, each 0-255. 
+The third layer serves the purpose of **End to End** packet delivery, by using a different addressing scheme then the one that layer 2 uses called `IP address`. An IP Address is made up of 32 bits represented as 4 octets, each 0-255, and that address is used to represent a computer in the wide web of machines connected to the internet. 
 
 A component used that belongs to this layer is the `Router`, the router lets computers communicate outside of their networks in-directly, passing the packets though themselves and routing them to their end goal one router at a time.
 
@@ -116,10 +116,78 @@ STEPS TO MOVE YOUR PACKET! (FROM C1 TO C2)
 ```
 
 
+
 #### **The Fourth Layer, The transport Layer**
+
+The goal of the 4th layer, the transport layer, is to provide **Service to Service** communication. After tackling communication between different machines in and out of the LAN we need to then decide what service (application or computer service) recieves what information. After all, we wouldn't want our minecraft game to get our discord messages or youtube videos.
+
+The way layer 4 sorts out the incoming packets is with it's own addressing scheme called `transport protocols & ports`(similar to ports on a switch). And it works like that:
+* TCP (Transmission Control Protocol)
+    This protocol is used to transmit information over a stable connection between two endpoints (favors reliability). has 65535 ports.
+    
+    Features:
+    * TCP Handshake.
+    * Data-Loss recovery.
+    * Flow control.
+
+    Flaws:
+    * Slower than UDP (Higher Round trip time).
+    * Expensive to initiate.
+
+
+* UDP (User Datagram Protocol)
+    This protocol is used to send data without a pre-established connection very quickly and inexpensively (favors efficiency). has 65535 ports.
+    
+    Features:
+    * Very fast.
+    * Very simple.
+    * 0 RTT.
+
+    Flaws:
+    * Not stable.
+    * No data-loss recovery.
+    * No Flow control.
+
+Using the layer 4 header, an application on the local machine can decide what protocol it wants to use to send data on the 4th layer and what port to bind itself to. Every application that wants to recieve information from a remote location has to bind itself to a vacated port, by doing that it can make sure that it will recieve only the information that is sent by *hopefully* the server/client side of the same application.
+
+To sum up the Packet structure up until now and how everything works we can equate it to a real life postal address.
+First, the structure:
+```
++-------------------------------+
+|   DATA // The data being sent | 
+'-------------------------------'
+|   0100100001100101011011000   |
+|   110110001101111             |
+|                               |
++-------------------------------+
+| LAYER 4 HEADER (TCP/UDP)      |
+'-------------------------------'
+|                               | 
+| SENDER PORT           ...     |
+| TARGET PORT           ...     |
++-------------------------------+
+| LAYER 3 HEADER                |
+'-------------------------------'
+|                               | 
+| SENDER IP ADDRESS     ...     |
+| TARGET IP ADDRESS     ...     |
++-------------------------------+
+| LAYER 2 HEADER                |
+'-------------------------------'
+|                               | 
+| SENDER MAC ADDRESS    ...     |
+| TARGET MAC ADDRESS    ...     |
++-------------------------------+
+```
+
+
 
 
 #### **The Fifth Layer, The Session Layer**
+
+The 
+
+
 
 
 #### **The Sixth Layer, The Presentation Layer**
