Added layers 5-7 to [1.md]

--- a/1.md
+++ b/1.md
@@ -121,7 +121,7 @@ STEPS TO MOVE YOUR PACKET! (FROM C1 TO C2)
 
 The goal of the 4th layer, the transport layer, is to provide **Service to Service** communication. After tackling communication between different machines in and out of the LAN we need to then decide what service (application or computer service) recieves what information. After all, we wouldn't want our minecraft game to get our discord messages or youtube videos.
 
-The way layer 4 sorts out the incoming packets is with it's own addressing scheme called `transport protocols & ports`(similar to ports on a switch). And it works like that:
+The way layer 4 sorts out the incoming `data streams` is with it's own addressing scheme called `transport protocols & ports`(similar to ports on a switch). And it works like that:
 * TCP (Transmission Control Protocol)
     This protocol is used to transmit information over a stable connection between two endpoints (favors reliability). has 65535 ports.
     
@@ -148,36 +148,36 @@ The way layer 4 sorts out the incoming packets is with it's own addressing schem
     * No data-loss recovery.
     * No Flow control.
 
-Using the layer 4 header, an application on the local machine can decide what protocol it wants to use to send data on the 4th layer and what port to bind itself to. Every application that wants to recieve information from a remote location has to bind itself to a vacated port, by doing that it can make sure that it will recieve only the information that is sent by *hopefully* the server/client side of the same application.
+Using the layer 4 header, an application on the local machine can decide what protocol it wants to use to send data on the 4th layer and what port to bind itself to. Every application that wants to recieve information from a remote location has to bind itself to a vacated port, by doing that it can make sure that it will recieve only the information that is sent by *hopefully* the server/client side of the same application and isolate it's own data stream from the other existing data streams that the machine is handling. Like a Minecraft server session, a Youtube video and a Discord messaging application.
 
 To sum up the Packet structure up until now and how everything works we can equate it to a real life postal address.
 First, the structure:
 ```
 +-------------------------------+
 |   DATA // The data being sent | 
-'-------------------------------'
+|-------------------------------|
 |   0100100001100101011011000   |
 |   110110001101111             |
 |                               |
-+-------------------------------+
-| LAYER 4 HEADER (TCP/UDP)      |
 '-------------------------------'
+| LAYER 4 HEADER (TCP/UDP)      |
+|-------------------------------|
 |                               | 
 | SENDER PORT           ...     |
 | TARGET PORT           ...     |
-+-------------------------------+
-| LAYER 3 HEADER                |
 '-------------------------------'
+| LAYER 3 HEADER                |
+|-------------------------------|
 |                               | 
 | SENDER IP ADDRESS     ...     |
 | TARGET IP ADDRESS     ...     |
-+-------------------------------+
-| LAYER 2 HEADER                |
 '-------------------------------'
+| LAYER 2 HEADER                |
+|-------------------------------|
 |                               | 
 | SENDER MAC ADDRESS    ...     |
 | TARGET MAC ADDRESS    ...     |
-+-------------------------------+
+'-------------------------------'
 ```
 
 
@@ -185,13 +185,25 @@ First, the structure:
 
 #### **The Fifth Layer, The Session Layer**
 
-The 
+After addressing the network addressing problems and who is who and where we have layers 5, 6 and 7 which are can be freely intergrated by each application. 
+
+Layer 5 just manages the session of the two endpoints:
+* creating it at the beginning of communication 
+* termintating it at the end of communication.
+* Re-establish transport connection if it fails.
+* Efficient diconnection handling using "checkpoints".
+* Multiplex data across multiple transport connections. (HTTP 2.0 / HTTPS / QUIC)
 
 
 
 
 #### **The Sixth Layer, The Presentation Layer**
 
+The 6th layer is crucial, it is responsible for preparing the data to be ready for processing by the application layer. It's responsible for encrypting the data using encryption protocols, character set translation and data compression. Machines may use different encoding so this layer is responsible for encoding/decoding the information, if the two machines want to encrypt their sessions then this layer is also responsible for that. From the actual message encryption to establishing encryption algorithms and keys. And lastly this layer is responsible for compressing the data to improve efficiency.
+
+
+
 
 #### **The Seventh Layer, The Application Layer**
 
+The application layer contains application specific protocols that involve user input or output, it is actually the only layer that interacts with the user. A protocol that can be found in this layer is HTTP or SMTP.
