Update 01. The Seven Layer OSI Model.md

--- a/01. The Seven Layer OSI Model.md
+++ b/01. The Seven Layer OSI Model.md
@@ -46,7 +46,7 @@ The Data-Link layer solves the issues presented when sending information between
 
 **Each NIC** has a `MAC Addresses`. A MAC Address is a standard, "one of a kind", string of 48 bits represented by 12 _Hexadecimal_ characters (exmpl: A0-B1-C2-D3-E4-F5) that are exclusive to each NIC. We can then use that MAC Address to send information to another machine on the same network.
 
-Another component in the 2nd layer is a `Switch`. A switch allows to connect multiple computers physically using network cables to creating a *local* network called "**LAN**"* (Local Area Network). A switch can also be used to group computers in the LAN to *sub*-networks called a "**VLAN**"s* that are "pseudo-isolated" from the rest of the computers connected to the switch, sending packets from one VLAN to another is still possible tough.
+Another component in the 2nd layer is a `Switch`. A switch allows to connect multiple computers physically using network cables to create a *local* network called "**LAN**"* (Local Area Network). A switch can also be used to group computers in the LAN to *sub*-networks called a "**VLAN**"s* that are "pseudo-isolated" from the rest of the computers connected to the switch, sending packets from one VLAN to another is still possible tough.
 
 The 2nd layer also takes care of delivering a packet through routers using MAC Addresses, simply delivering to the next router **NIC MAC Address** until the target machine is reached.
 This way of packet delivery is called **Hop-to-Hop**.
@@ -63,14 +63,14 @@ MAC ADDR    a0-d2-e0        f0-d1-f2        a2-2f-3f        5f-2c-4d        a0-d
 ```
 
 ```diff
-- (Is swich strickly a second layer component?)
+- (If a switch is used to connect a computer physically why is it a second layer component?)
 ```
 
 #### **The Third Layer, The Networking Layer**
 
-The third layer serves the purpose of **End to End** packet delivery, by using a different addressing scheme then the one that layer 2 uses called `IP address`. An IP Address is made up of 32 bits represented as 4 octets, each 0-255, and that address is used to represent a computer in the wide web of machines connected to the internet. 
+The third layer serves the purpose of **End to End** packet delivery,  *layer 2 does not use MAC addresses like layer 2 does, it uses a different addressing scheme called `IP address`* *by using a different addressing scheme then the one that layer 2 uses called `IP address`*. An IP Address is made up of 32 bits represented as 4 octets, each 0-255, and that address is used to represent a computer in the wide web of machines connected to the internet. 
 
-A component used that belongs to this layer is the `Router`, the router lets computers communicate outside of their networks in-directly, passing the packets though themselves and routing them to their end goal one router at a time.
+A component used that belongs to this layer is the `Router`, the router lets computers communicate outside of their networks in-directly, passing the packets though and routing them to their end goal one router at a time.
 
 ```
              __             !__             !__             !__              __
@@ -86,7 +86,7 @@ The simple answer is that they serve the same purpose in different methods that 
 STEPS TO MOVE YOUR PACKET! (FROM C1 TO C2)
 --------------------------------------------------------------------------------------------
 
-    1.  Packet after leaving C1, on it's eay to the first router (R0).
+    1.  Packet after leaving C1, on it's way to the first router (R0).
 
     +---------------------------------------+
     |   DATA                                |
@@ -118,17 +118,18 @@ STEPS TO MOVE YOUR PACKET! (FROM C1 TO C2)
     And so it goes until the packet reaches IP address 192.130.44.21.
 
 --------------------------------------------------------------------------------------------
-
-
 ```
 
-
+```diff
+- (Consider my rephrasine in **- make sure I understood the intention)
+- (MAC and IP does not serve the same purpose exactly, and please rephrase and simplify your explanation about the differences)
+```
 
 #### **The Fourth Layer, The transport Layer**
 
 The goal of the 4th layer, the transport layer, is to provide **Service to Service** communication. After tackling communication between different machines in and out of the LAN we need to then decide what service (application or computer service) recieves what information. After all, we wouldn't want our minecraft game to get our discord messages or youtube videos.
 
-The way layer 4 sorts out the incoming `data streams` is with it's own addressing scheme called `transport protocols & ports`(similar to ports on a switch). And it works like that:
+The way layer 4 sorts the incoming `data streams` is by using it's own addressing scheme called `transport protocols & ports`(similar to ports on a switch). And it works like that:
 * TCP (Transmission Control Protocol)
     This protocol is used to transmit information over a stable connection between two endpoints (favors reliability). has 65535 ports.
     
@@ -187,7 +188,9 @@ First, the structure:
 '-------------------------------'
 ```
 
-
+```diff
+- (In which way does the addressing scheme called `transport protocols & ports` is similar to ports on a switch?)
+```
 
 
 #### **The Fifth Layer, The Session Layer**
