Update 01. The Seven Layer OSI Model.md

--- a/01. The Seven Layer OSI Model.md
+++ b/01. The Seven Layer OSI Model.md
@@ -190,12 +190,13 @@ First, the structure:
 
 ```diff
 - (In which way does the addressing scheme called `transport protocols & ports` is similar to ports on a switch?)
+- (In the diagram the data should be under layer 2 not above 4)
 ```
 
 
 #### **The Fifth Layer, The Session Layer**
 
-After addressing the network addressing problems and who is who and where we have layers 5, 6 and 7 which are can be freely intergrated by each application. 
+*After addressing the network addressing problems and who is who and where we have layers 5, 6 and 7 which are can be freely intergrated by each application.*
 
 Layer 5 just manages the session of the two endpoints:
 * creating it at the beginning of communication 
@@ -204,8 +205,9 @@ Layer 5 just manages the session of the two endpoints:
 * Efficient diconnection handling using "checkpoints".
 * Multiplex data across multiple transport connections. (HTTP 2.0 / HTTPS / QUIC)
 
-
-
+```diff
+- (please rephrase the first sentence between the **. Couldn't understand the sentence)
+```
 
 #### **The Sixth Layer, The Presentation Layer**
 
