Update 02. Network Routing Wiki.md

--- a/02. Network Routing Wiki.md
+++ b/02. Network Routing Wiki.md
@@ -41,6 +41,9 @@ Most communication happens through the switch but keep in mind that it can also 
 -------------------------------------------------------------------------------------------------------------------
 
 Let's take the network shown above and demonstrate, `HOST A` wants to send a packet to `HOST B`. `HOST A` 
+```diff
+- (I think the sentence above is incomplete)
+```
 ```
 .         |    __                        .------.                        __
 .         |   [Ll] __________________ P1 | ---> | P2 __________________ [Ll]
@@ -215,9 +218,16 @@ The router is a layer 3 network component used to move data between different ne
 >
 >   host        - any node that is not a router.
 
-This basically means that **a host would drop a packet that is not intended for it**, but a **router** will try to **route ir forward**.
+```diff
+- (Wy IPv6?)
+```
+
+This basically means that **a host would drop a packet that is not intended for it**, but a **router** will try to **route it forward**.
 
 Since routers are connected to multiple networks at once and must maintain the ability to interact with all of them (to route packets), **they must have an IP + MAC address on all networks they participate in AND must maintain a map of all of those networks.** This map is called a `Routing Table`. When a router gets a packet destined to a network it doesn't know how to route to, i.e it doesn't exist in it's routing table, it will drop it, otherwise it will send it to the next node in the chain to the target address. 
+```diff
+- (If the packet is dropped or forwarded is dependent on configuration)
+```
 
 ```
 +--------------10.0.55.x/24-------------+              +--------------10.0.44.x/24-------------+                +--10.0.66.x/24--+
@@ -227,7 +237,7 @@ Since routers are connected to multiple networks at once and must maintain the a
 |                           \           | eth1    eth0 |           /                           |   eth1    eth0 |                |
 |            __   _          \ +----+   |    +----+    |   +----+ /          __   _            |      +----+    |                |
 |       .4  [Ll] |=| _________\| S1 |------> | R1 | <------| S2 |/_________ [Ll] |=|  .20      | .--> | R2 | <----      ...      |
-|     e1e1  ==== '-'          /+----+   | .1 +----+ .1 |   +----+\          ==== '-' b3b3      | | .2 +----+ .1 |                |
+|     e1e1  ==== '-'          /+----+   | .2 +----+ .1 |   +----+\          ==== '-' b3b3      | | .2 +----+ .1 |                |
 |                            /          | c444    fff2 |     |    \                            | | dd22    ee34 |                |
 |            __   _         /           |  ^        ^  |     |     \         __   _            | |              |                |
 |       .2  [Ll] |=| ______/            |  |        |  |     |      \______ [Ll] |=|   .2      | |              |                |
@@ -238,6 +248,10 @@ Since routers are connected to multiple networks at once and must maintain the a
 .                                              \/
 .                                   Router interfaces IP address
 .                                   And MAC.
+```
+
+```diff
+- (Why is S2 connected to 2 roters?)
 ```
 
 Now, there are three types of routing paths that can be written into a routing tables. 
@@ -257,6 +271,10 @@ Second, the `Static Routing`. If Router 1 (R1) was to get a packet destined to 1
 | 2                    | DC       | 10.0.55.0     | Eth1        |   |   | 2                    | DC       | 10.0.44.0     | Eth1        |
 | 3                    | Static   | 10.0.66.0     | 10.0.44.2   |   |   | 3                    | Static   | 10.0.55.0     | 10.0.44.1   |
 *I also added 10.0.44.0 to R2's routing table*
+
+```diff
+- (Please explain to me this table in person)
+```
 
 Then when the packet reaches Router 2 the other router (R2) will route it to it's DC (Directly connected) network.
 
@@ -335,7 +353,7 @@ Let's assume a situation where PC1 wants to send a message to PC3. There are a f
 
 > ### Default Gateway
 >
-> The address that the message will be sent to when a device doesn't know who to send the packet to, it usually means that the message is meant for a machine outside the network. The gateway will also usually be the nearest router to computer. To al computers in the drawing above the default gateway will be the router (R1).
+> The address that the message will be sent to when a device doesn't know who to send the packet to, it usually means that the message is meant for a machine outside the network. The gateway will also usually be the nearest router to computer. To all computers in the drawing above the default gateway will be the router (R1).
 
 > ### ARP - Address Resolution Protocol
 >
@@ -345,10 +363,14 @@ Let's assume a situation where PC1 wants to send a message to PC3. There are a f
 
 Alright, after we got that let's see what will happen in the situation where PC1 wants to send a message to PC3. **PC1 HAS TO KNOW PC3's IP ADDRESS**.
 
-PC1 knows that PC3 is not n their own network by compairing the IP addresses, `10.0.0.1` and `10.0.1.1`. PC1 will then try to send the message to the default gateway, but it doesn't know how to do that thought the switch because it only has it's IP so it wil user ARP. The switch will send the inquiry to `PC2` and `R1`, `R1` will return a response. In that transaction that switch S1 will also learn both PC1 and R1's MAC addresses and bind them to their ports.
+PC1 knows that PC3 is not n their own network by compairing the IP addresses, `10.0.0.1` and `10.0.1.1`. PC1 will then try to send the message to the default gateway, but it doesn't know how to do that thought the switch because it only has it's IP so it will use ARP. The switch will send the inquiry to `PC2` and `R1`, `R1` will return a response. In that transaction that switch S1 will also learn both PC1 and R1's MAC addresses and bind them to their ports.
 
 Using the found MAC address PC1 will send the message to the router R1, R1 will know that the LAN `10.0.1.x` is on the other port so it will send it there, the router doesn't know what PC3's MAC address is so it will send an ARP inquiry. PC3 will return a response. The switch S2 will learn and bind their MAC addresses.
 
 The router will send the message to PC3 using the newly found MAC address then.
 
 If PC3 wants to return a response, it will send a message with PC1's IP address and R1's MAC address (it learnt it in from the ARP inquiry). The Router knows PC1's MAC address and it will send it to PC1.
+
+```diff
+- (The explanation is way too long and there are some parts that appear more than once)
+```
