Update 03. Bigous Protocolous.md

--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -44,16 +44,16 @@ The big protocol wikipedia.
 
 ---------------------------------------------------------------------------------------------------------------------------------------------------
 
-## Internet Control Message Protocol A.K.A [ICUP](https://www.urbandictionary.com/define.php?term=Spell%20iCup)
+## Internet Control Message Protocol A.K.A [ICMP](https://www.urbandictionary.com/define.php?term=Spell%20iCup)
 ###### *[#Layer-3] [#Portless]*
 
 ICMP, or **I**nternet **C**ontrol **M**essage **P**rotocol is a protocol used to send control messages relating to the Internet protocol (IP).
 
 ### WHY WAS IT INVENTED
-Since the implementation of IP is not meant to be absolutely reliable and it can sometimes mess up, The ICMP protocol be used to return send feedback about problems that can arise when communicatinf with a host. However the ICMP protocol does not act to make the IP more reliable and does not guarantee 100% reliablility itself incase IP fails to deliver. ICMP will usually report on delivery errors of packets and no ICMP packet will be sent about a lost ICMP packet.
+Since the implementation of IP is not meant to be absolutely reliable and it can sometimes mess up, The ICMP protocol can be used to return or send feedback about problems that can arise when communicating with a host. However the ICMP protocol does not act to make the IP more reliable and does not guarantee 100% reliablility itself incase IP fails to deliver. ICMP will usually report on delivery errors of packets and no ICMP packet will be sent about a lost ICMP packet.
 
 ### HOW DOES IT WORK
-An ICMP packet is used to instruct a device in the routing path of a packet (including the source and destination) of a failure or change in the delivery of the packet (Except for `ICMP Type`s 0 and 8). The type and structure of the packet is determined by the `ICMP Type` parameter in the header. Each type also has an `ICMP Code` that determines the subject of the packet.
+An ICMP packet is used to inform a device in the routing path of a packet (including the source and destination) of a failure or change in the delivery of the packet (Except for `ICMP Type`s 0 and 8). The type and structure of the packet is determined by the `ICMP Type` parameter in the header. Each type also has an `ICMP Code` that determines the subject of the packet.
 
 ### ICMP TYPE SPECIFICATION EXAMPLES
 
@@ -118,7 +118,7 @@ An ICMP `Destination Unreachable` message will be recieved when a packet can't b
 ## Domain Name System A.K.A DNS
 ###### *[#Layer-7] [#TCP/53] [#UDP/53]*
 
-The DNS protocol is used for "translating" between IP addresses and Domain Names, thus the name Domain Name System. The protocol itself operates at the 7th OSI level which is the application layer and ontop of `UDP/53`. DNS went under a lot of transformation over the year since it was first introduced at 1983, today it exists in many variants that each serve a different purpose or build on previous implementation of the protocol. Some of these are:
+The DNS protocol is used for "translating" between IP addresses and Domain Names, thus the name Domain Name System. The protocol itself operates at the 7th OSI level which is the application layer and operates on top of port `UDP/53`. DNS went under a lot of transformation over the years since it was first introduced at 1983, today it exists in many variants that each serve a different purpose or build on previous implementation of the protocol. Some of these are:
 
 > #### `DNS over TCP` (TCP/53)
 >
@@ -139,6 +139,10 @@ The DNS protocol is used for "translating" between IP addresses and Domain Names
 > #### `DNS over Your Mother` (UDP/69)
 >
 > Tunnels the requests thrugh your mom, however some responses may be lost in the way back due to the fact that your mom ate them.
+
+```diif
+- (I do not not think this is appropriate here there is a burn section!)
+```
 
 And there are more. 
 
