--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -140,7 +140,7 @@ The DNS protocol is used for "translating" between IP addresses and Domain Names
 >
 > Tunnels the requests thrugh your mom, however some responses may be lost in the way back due to the fact that your mom ate them.
 
-```diif
+```diff
 - (I do not not think this is appropriate here there is a burn section!)
 ```
 
