Fixes for LLMNR

--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -190,6 +190,11 @@ LLMNR is used to **enable name resolutions** in places **where dns fails** to do
 ### WHY WAS IT INVENTED
 LLMNR provides name resolution ability inside the local-link (physical network) when dns is unavialable/unreliable or when it fails to return an answer. It was introduced as an IPv6 work around to NBT-NS which only supports IPv4.
 
+```diff
+- (As far as Im aware LLMNR works on IPv4 as well, check it...)
+- (I think that by local-link you mean LAN then itws not the physical network)
+```
+
 ### HOW DOES IT WORK
 
 > #### `LLMNR Query`
@@ -207,7 +212,10 @@ LLMNR provides name resolution ability inside the local-link (physical network) 
 
 Do note that **LLMNR should be disabled** in your local link network through GPO or other configuration due to it's critical security flaws.
 
-
+```diff
+- (What do you mean by authorative responder?)
+- (What are the security flaws we should be aware of?)
+```
 
 ###### [Back to top](#bigous-protocolous)
 ---------------------------------------------------------------------------------------------------------------------------------------------------
