--- a/03. Bigous Protocolous.md
+++ b/03. Bigous Protocolous.md
@@ -224,6 +224,10 @@ Do note that **LLMNR should be disabled** in your local link network through GPO
 ## Dynamic Host Configuration Protocol A.K.A DHCP
 ###### *[#Layer-3] [#Portless]*
 
+```diff
+- (It's not portless)
+```
+
 DHCP is used to assigned unique IP addresses to hosts in the network automatically, it can also assign other network configuration like subnet mask, DNS server and Default gateway. DHCP can provide a client with all the parameters it needs in order to operate in the network.
 
 ### WHY WAS IT INVENTED
@@ -240,7 +244,7 @@ Machines on the subnet may also reserve addresses on the DHCP Server in order to
 ### IP Assignment Process
 > #### `DHCPDISCOVER`
 > 
-> When a client detects that it has no IP (And DHCP is enabled on it) it will look for a DHCP server on the network using a broadcast message. The DHCPDISCOVER message MAY include options that suggest values for the network address and lease duration.
+> When a client detects that it has no IP (And DHCP is enabled) it will look for a DHCP server on the network using a broadcast message. The DHCPDISCOVER message MAY include options that suggest values for the network address and lease duration.
 
 > #### `DHCPOFFER`
 > 
@@ -260,6 +264,10 @@ at the end, when a computer wants to disconnect from the network it can send.
 > #### `DHCPRELEASE`
 > 
 > Client to server relinquishing network address and cancelling remaining lease.
+
+```diff
+- (What IP address would the compute ruse untilit will get one from the DHCP server?)
+```
 
 
 ###### [Back to top](#bigous-protocolous)
